[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vault-namespace-audit"
version = "1.0.0"
description = "A defensive security tool for auditing HashiCorp Vault clusters"
requires-python = ">=3.8"
dependencies = [
    "hvac==2.2.0",
    "pandas==2.2.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]

[project.scripts]
vault-audit = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "performance: Performance tests",
]